[tool.poetry]
name = "black-box"
version = "0.1.0"
description = "From scratch implementation of a basic deep learning framework"
authors = ["Aamir-M-Khan <aamir11amu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
